k8s/job-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: job-api
  template:
    metadata:
      labels:
        app: job-api
    spec:
      containers:
        - name: job-api
          image: job-api
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: job-api
spec:
  type: NodePort
  selector:
    app: job-api
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30007
