k8s/stats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-service
  namespace: microservices
  labels:
    app: stats-service 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stats-service
  template:
    metadata:
      labels:
        app: stats-service
    spec:
      containers:
        - name: stats-service
          image: stats-service
          imagePullPolicy: Never
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: stats-service
  namespace: microservices
  labels:
    app: stats-service
spec:
  selector:
    app: stats-service
  ports:
    - name: http
      port: 4000
      targetPort: 4000
