k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: worker
   namespace: microservices 
   labels:
    app: worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: worker-service
          imagePullPolicy: Never
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: "200m"
            limits:
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: worker
  namespace: microservices
  labels:
    app: worker
spec:
  selector:
    app: worker
  ports:
    - name: http
      port: 3001
      targetPort: 3001
